# opening-analysis

./: .gitignore  README.md  inference.py  opening_priors.py  preliminary_analysis.py  test.tsv
board_learn/: bin_read.py  inference.py  load_data.py  model.py  opening_dataset.py  opening_model.py  train.py  utils.py
opening_classifier/: pyproject.toml  setup.py
opening_classifier/src/: bindings.cpp  bltn_ctzll.hpp  board.cpp  board.hpp  classifier.cpp  classifier.hpp  definitions.hpp  movegen.cpp  movegen.hpp  polyglot.cpp  polyglot.hpp  reader.hpp  zobrist_key.hpp
